--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     }
 }
 
+
 html,body {
     font-family: "Noto Sans TC", sans-serif;
     background-color: #f9f9f9;
@@ -193,3 +194,18 @@ td{
     font-size: 24px;
     color: #333;
 }
+
+#rotate-warning {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    color: #f85f5f;
+    font-size: 2rem;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
