--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,12 @@ td{
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 9999;
     align-items: center;
+
+.warning-row {
+    background-color: #fdd;
+    font-weight: bold;
+    color: #b00000;
+}
     justify-content: center;
     font-size: 24px;
     color: #333;
