--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,20 @@ td{
     z-index: 9999;
     align-items: center;
 
+.spinner {
+  border: 8px solid #f3f3f3;        /* 淡灰底圈 */
+  border-top: 8px solid #3498db;    /* 藍色上圈 */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .warning-row {
     background-color: #fdd;
     font-weight: bold;
